--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "firmata": "^2.0.0",
-    "http": "0.0.0"
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "socket.io": "^2.2.0"
   }
 }
